// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders with a Button and a FlatButton in a large node 1`] = `
<styled.div>
  <Box
    key=".0"
  >
    <Button
      title="Test"
      variant="primary"
    />
  </Box>
  <Box
    key=".1"
  >
    <Button
      title="Test"
      variant="secondary"
    />
  </Box>
</styled.div>
`;

exports[`ButtonGroup renders with a single Button in a small node 1`] = `
<styled.div>
  <Box
    key=".0"
  >
    <Button
      title="Test"
      variant="primary"
    />
  </Box>
</styled.div>
`;
